--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,127 @@ code {
     monospace;
 }
 
-table {
+.TFtable {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  width: 100%;
 }
-th,
-td {
-  border: 1px solid #c6c7cc;
-  padding: 10px 15px;
+/*Style for Table Head - TH*/
+.TFtable th {
+  text-align: center;
+  background-color: #007075;
+  color: #fff;				
+  padding: 25px;
+}
+/*TD and TH Style*/
+.TFtable td, .TFtable th {
+  border: 1px solid #dedede; /*Border color*/
+  padding: 15px;
+}
+.TFtable tr{
   text-align: left;
 }
-th {
-  font-weight: bold;
+/*Table Even Rows Styles*/
+.TFtable tr:nth-child(even){
+  background-color: #afafaf;
+}
+/*Table ODD Rows Styles*/
+.TFtable tr:nth-child(odd){
+  background-color: #cfcfcf;
+}			
+/*Table Row HOver Style*/
+.TFtable tr:hover{
+  background-color: #927474;
+}
+
+.button--orange {
+  background-color: #F37921;
+  border-color: #F37921;
+  color: #fff;
+}
+
+.button--red{
+  background-color: #DC143C;
+  border-color: #DC143C;
+  color: #fff;
+}
+
+.button--blue{
+  background-color: #008489;
+  border-color: #008489;
+  color: #fff;
+}
+
+.fRight{
+  float: right;
+  margin: 5px;
+}
+
+a{color:#fff}
+
+a.buttonLook{text-decoration: none;border: 1px solid transparent;
+  padding: 0px 10px;
+  font-size: 0.875rem;
+  height: 34px;
+  line-height: 32px;
+  border-radius: 2px;
+  outline: none;
+  white-space: nowrap;
+  min-width: 90px;
+  text-transform: capitalize;display: inline-block;
+  cursor: pointer;
+  font-weight: 600;
+  text-align: center;
+  vertical-align: middle;
+  margin: 5px;
+}
+
+a.buttonLook.button--size{
+  height:32px;
+  min-width: 34px;
+}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+  margin: 8px 0;
+}
+
+.errorMsg {
+  color: #cc0000;
+  margin-bottom: 12px;
+}
+
+.successMsg{
+  color: #1343ac;
 }
